[project]
name = "powerbiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.53.0",
    "keybert>=0.9.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "odfpy>=1.4.1",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "textblob>=0.19.0",
    "yake>=0.6.0",
]
